# CountLogger

./: .gitignore  Cargo.toml  README.md  build.py  main.py  main.rs
.github/workflows/: ping.yml
.sqlx/: query-9fe06774c4b6927db27c2b7c88d056644de67f2c9f1b09a1cb9fcba3e7041f2b.json  query-daa96070d9bce64bfd6b5a4c019e086696a62ce299b12f496e5fa31540909e4d.json  query-fcb3ee45f70296ffd760077c2db6cfedce6dcc16ac46691d6754297fdf2f621c.json
src/: bot.rs  dictionary.json  main.rs  utils.rs
src/commands/: help.rs  message.rs  mod.rs  ping.rs  relog.rs  setup.rs
src/data/: mod.rs  structs.rs
src/handlers/: mod.rs  ready.rs
