[package]
name = "CountLogger"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = "1.0.219"
serde_json = "1.0.140"

[[bin]]
name = "CountLogger"
path = "src/main.rs"
