[package]
name = "CountLogger"
version = "0.2.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
dotenv = "0.15"
serde = "1.0.219"
serde_json = "1.0.140"
chrono = "0.4.42"
once_cell = "1.21.3"
tokio-util = "0.7.16"
humantime = "2.3.0"

[[bin]]
name = "CountLogger"
path = "src/main.rs"
